//
// Protocol buffers definition
//
syntax = "proto3";
package pt.ulisboa.tecnico.sirs.contracts.grpc;

option java_multiple_files = true;

import "generic.proto";

service RbacService {
	rpc validatePermissions(ValidatePermissionRequest) returns (ValidatePermissionResponse);
}

message ValidatePermissionRequest {
	string username = 1;
	RoleType role = 2;
	CompartmentType permission = 3;
}

message ValidatePermissionResponse {
	Ticket data = 1;
	bytes signature = 2;
}